--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="container">
     <h2>QR Kart Oluştur</h2>
     
-    <input type="text" id="title-input" placeholder="Başlık (Örn: Kardiyoloji)" />
+    <input type="text" id="title-input" placeholder="Başlık (Örn: Kardiyoloji Sempozyumu)" />
     <input type="text" id="link-input" placeholder="URL veya Metin" />
     
     <button class="btn btn-generate" onclick="handleProcess()">Kartı Oluştur</button>
@@ -221,3 +221,4 @@
 
 </body>
 </html>
+
