--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
     text-decoration: none; /* Alt çizgiyi kaldırır */
     display: inline-block; /* Padding ve boyutların doğru çalışmasını sağlar */
 }
+        /* Mobil uyum için medya sorguları */
+        @media screen and (max-width: 800px) {
+            .container1p {
+                margin: 20px;
+                padding: 15px;
+            }
+            h1 {
+                font-size: 20px;
+            }
+            button {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -221,4 +234,5 @@
 
 </body>
 </html>
+
 
