--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         // 5. Alt Bilgi (Opsiyonel)
         ctx.fillStyle = "#94a3b8";
         ctx.font = "12px sans-serif";
-        ctx.fillText("EÜTF Yön Bulma Sistemi | ZEKI", cardWidth / 2, cardHeight - 30);
+        ctx.fillText("SCAN ME!", cardWidth / 2, cardHeight - 30);
 
         // 6. İndirme İşlemi
         const imageURL = canvas.toDataURL("image/png");
@@ -234,5 +234,6 @@
 
 </body>
 </html>
+
 
 
